gitops/build/tekton/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations: 
    cert-manager.io/issuer: tekton-pipelines
    cert-manager.io/issuer-kind: Issuer
spec:
  rules:
  - host: tekton.homelab.platformfeverdream.io
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: tekton-dashboard
            port:
              number: 9097
  tls:
  - hosts:
    - tekton.homelab.platformfeverdream.io
    secretName: tls-tekton-ingress
